# sg_ecg_tool

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml
sg_ecg_tool/: sg_ecg_tool.py
tests/: test_sg_ecg_tool.py
