[tool.poetry]
name = "sg_ecg_tool"
version = "0.1.0"
description = "Python package that generates statistics on higher education and employment, for Singaporean students."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
